--- a/src/app/card/card.component.html
+++ b/src/app/card/card.component.html
@@ -1,8 +1,7 @@
-<article>
-  <figure>
-    <img src="" alt="photo"/>
-    <figcaption>moto</figcaption>
-  </figure>
-  <h1>YAMAHA FINO</h1>
-  <p>woeifhehiwerigh</p>
-</article>
+<div class="info-card">
+  <div class="card-image"></div>
+  <div class="card-detail">
+    <h1>YAMAHA FINO</h1>
+    <p>woeifhehiwerigh</p>
+  </div>
+</div>
