--- a/src/app/card/card.component.css
+++ b/src/app/card/card.component.css
@@ -1,4 +1,4 @@
-article{
+.info-card{
   display: flex;
   flex-direction: column;
   gap: 8px;
@@ -6,5 +6,17 @@ article{
   border-radius: 10px;
   background-color: #C9C9C9;
   border: 2px solid gray;
-  padding: 6px;
+  min-width: 300px;
+  height: 350px;
+  overflow: hidden;
+}
+
+.card-image{
+  background-color: blanchedalmond;
+  width: 100%;
+  height: 170px;
+}
+
+.card-detail{
+  padding: 8px;
 }
