--- a/src/app/home-explore/home-explore.component.html
+++ b/src/app/home-explore/home-explore.component.html
@@ -1,6 +1,6 @@
 <section class="explore-container">
-  <h1>รุ่นรถทั้งหมด</h1>
+  <h1>{{title}}</h1>
   <div class="content-container">
-    <app-card *ngFor="let profile of motorbikes" [profile]="profile"]></app-card>
+    <app-card *ngFor="let profile of motorbikes" [profile]="profile"></app-card>
   </div>
 </section>
