--- a/src/app/app-card/app-card.component.html
+++ b/src/app/app-card/app-card.component.html
@@ -4,5 +4,9 @@
   <div class="card-detail">
     <h1>{{profile.brandName}}, {{profile.modelName}}, {{profile.engineSize}}</h1>
     <p>{{profile.description}}</p>
+    <div class="card-action-group">
+      <button [class.favorited]="favorited">สนใจ</button>
+      <button [class.available]="profile.available">จองเลย</button>
+    </div>
   </div>
 </div>
