--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,15 @@
 <nav>
-  <h1 class="company-name">MotoBuddy</h1>
-  <div>
-    <input (keyup)="keyEnter($event)" (keyup.enter)="handleSubmit()"/>
+  <div class="left-side">
+    <h1 class="company-name">MotoBuddy</h1>
+  </div>
+  <div class="right-side">
+    <input
+      (keyup)="keyEnter($event)"
+      (keyup.enter)="handleSubmit(user)"
+      #user
+      id="userInput"
+      [defaultValue]="suggestedFilter"
+    />
     <div class="nav-group">
       <a href="/get-app">get app</a> <a href="contact">contact</a>
     </div>
