learn: another way to loop

--- a/src/app/home-explore/home-explore.component.html
+++ b/src/app/home-explore/home-explore.component.html
@@ -2,6 +2,9 @@
 <section class="explore-container">
   <h1>{{title}}</h1>
   <div class="content-container">
-    <app-card *ngFor="let profile of motorbikes" [profile]="profile"></app-card>
+    @for(profile of motorbikes; track profile){
+      <app-card [profile]="profile"></app-card>
+    }
+    <!-- <app-card *ngFor="let profile of motorbikes" [profile]="profile"></app-card> -->
   </div>
 </section>
