learn: handling array

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -145,6 +145,7 @@
   </div>
   <app-navbar></app-navbar>
   <app-home-explore></app-home-explore>
+  <app-home-favorite></app-home-favorite>
 </main>
 
 <router-outlet />
