--- a/src/app/home-favorite/home-favorite.component.html
+++ b/src/app/home-favorite/home-favorite.component.html
@@ -4,12 +4,11 @@
     <button (click)="addFavorite()">เพิ่มด่วน</button></span
   >
   <div class="content-container">
-    
-    @if(favorites.length == 0){
-      <p>no data found</p>}
     @for(profile of favorites;track profile; let i = $index; let c = $count){
     <app-card [profile]="profile"></app-card>
     <button (click)="deleteFavorite(i)">delete</button>
+    } @empty {
+    <p>no data found</p>
     }
   </div>
 </section>
