--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -92,8 +92,8 @@ main {
 
 .pill-group {
   display: flex;
-  flex-direction: column;
-  align-items: start;
+  flex-direction: row;
+  padding: 1rem;
   flex-wrap: wrap;
   gap: 1.25rem;
 }
