learn: event emitter

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,6 +8,7 @@
     </div>
   </section>
   <app-navbar></app-navbar>
+  <app-home-profile></app-home-profile>
   <app-home-explore></app-home-explore>
   <app-home-favorite></app-home-favorite>
 </main>
