--- a/src/app/home-profile/home-profile-form/home-profile-form.component.css
+++ b/src/app/home-profile/home-profile-form/home-profile-form.component.css
@@ -1,10 +1,14 @@
-form{
+.form{
+  padding: 2rem;
   display: flex;
-  gap: 0.5rem;
-  justify-content: flex-start;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  background-color: rgb(241, 202, 150);
-  padding: 1.5rem 3rem;
+  background-color: rgb(255, 255, 255, 0.7);
+  color: black;
+  width: 100%;
+  height: calc(100% - 4rem);
+  border-radius: 1.5rem;
 }
 
 input{
